# python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  mkdocs.yml  pyproject.toml  release-please-config.json
.agents/skills/execute/: SKILL.md
.agents/skills/fix-docs/: SKILL.md
.agents/skills/fix-plan/: SKILL.md
.agents/skills/generate-diagrams/: SKILL.md
.agents/skills/generate-images/: SKILL.md
.agents/skills/html-artifact/: SKILL.md
.agents/skills/init-project/: SKILL.md
.agents/skills/ralph-execute/: SKILL.md
.agents/skills/ralph-review/: SKILL.md
.agents/skills/review-docs/: SKILL.md
.agents/skills/review-plan/: SKILL.md
.agents/skills/verify/: SKILL.md
.agents/skills/verify-tests/: SKILL.md
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-writer.md
.claude/commands/: execute-plan.md  fix-docs.md  fix-plan.md  generate-diagrams.md  generate-images.md  html-artifact.md  initialize-project.md  ralph-execute.md  ralph-review.md  review-docs.md  review-plan.md  verify-documentation.md  verify-implementation.md  verify-tests.md
.claude/hooks/: post-compact-context.sh  protect-files.sh
.claude/rules/: docs.md  src.md  tests.md
.claude/skills/_shared/: testing-conventions.md
.claude/skills/execute/: SKILL.md
.claude/skills/executing-plans/: SKILL.md
.claude/skills/fix-docs/: SKILL.md
.claude/skills/fixing-implementation-plans/: SKILL.md
.claude/skills/generate-diagrams/: SKILL.md
.claude/skills/generate-images/: SKILL.md
.claude/skills/html-artifact/: SKILL.md
.claude/skills/init-project/: SKILL.md
.claude/skills/initializing-projects/: SKILL.md
.claude/skills/ralph-execute/: SKILL.md
.claude/skills/ralph-review/: SKILL.md
.claude/skills/review-docs/: SKILL.md
.claude/skills/review-plan/: SKILL.md
.claude/skills/reviewing-implementation-plans/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/verify-tests/: SKILL.md
.claude/skills/verifying-documentation/: SKILL.md
.claude/skills/verifying-implementation/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  setup-dev-env.sh
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  release-please.yml
docs/: contributing.md  index.md
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/scratchpads/: .gitkeep
plans/: .gitkeep
python-factory-plugin/: README.md
python-factory-plugin/.claude-plugin/: plugin.json
python-factory-plugin/agents/: code-reviewer.md
python-factory-plugin/hooks/: format-python.sh  hooks.json  post-compact-context.sh
python-factory-plugin/skills/_shared/: html-conventions.md
python-factory-plugin/skills/execute/: SKILL.md
python-factory-plugin/skills/fix-plan/: SKILL.md
python-factory-plugin/skills/generate-diagrams/: SKILL.md
python-factory-plugin/skills/init-project/: SKILL.md
scripts/: generate_doc_images.py
src/: __init__.py
tests/: test_examples.py  test_placeholder.py  test_skill_frontmatter.py
(+5 files in other folders)
